--- a/dct_widgets/blacklevelbox/blacklevelbox.ui
+++ b/dct_widgets/blacklevelbox/blacklevelbox.ui
@@ -78,10 +78,10 @@
          <number>180</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -159,16 +159,16 @@
          <number>180</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage0">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
         </property>
         <property name="backgroundImage1">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-green.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-green.png</pixmap>
         </property>
         <property name="backgroundImage2">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
         </property>
        </widget>
       </item>
@@ -220,10 +220,10 @@
          <number>180</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -302,16 +302,16 @@
          <number>180</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage0">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
         </property>
         <property name="backgroundImage1">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-green.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-green.png</pixmap>
         </property>
         <property name="backgroundImage2">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
         </property>
        </widget>
       </item>
@@ -406,10 +406,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -449,16 +449,16 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage0">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
         </property>
         <property name="backgroundImage1">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-green.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-green.png</pixmap>
         </property>
         <property name="backgroundImage2">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
         </property>
        </widget>
       </item>
@@ -500,7 +500,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
