--- a/dct_widgets/fltbox/fltbox.ui
+++ b/dct_widgets/fltbox/fltbox.ui
@@ -84,10 +84,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -225,10 +225,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -309,10 +309,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -444,10 +444,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -490,7 +490,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
