--- a/dct_widgets/outbox/outbox.ui
+++ b/dct_widgets/outbox/outbox.ui
@@ -845,10 +845,10 @@
         <number>150</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
        </property>
       </widget>
      </item>
@@ -885,10 +885,10 @@
         <number>150</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -994,10 +994,10 @@
         <number>150</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
        </property>
       </widget>
      </item>
@@ -1034,10 +1034,10 @@
         <number>150</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -1066,7 +1066,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
