--- a/dct_widgets/triplechannelknobbox/triplechannelknobbox.ui
+++ b/dct_widgets/triplechannelknobbox/triplechannelknobbox.ui
@@ -98,10 +98,10 @@
       <bool>true</bool>
      </property>
      <property name="backgroundImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-green.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-green.png</pixmap>
      </property>
      <property name="needleImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
      </property>
      <property name="maxAngle">
       <number>180</number>
@@ -189,10 +189,10 @@
       <bool>true</bool>
      </property>
      <property name="backgroundImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
      </property>
      <property name="needleImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
      </property>
      <property name="maxAngle">
       <number>180</number>
@@ -268,10 +268,10 @@
       <bool>true</bool>
      </property>
      <property name="backgroundImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
      </property>
      <property name="needleImage">
-      <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+      <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
      </property>
      <property name="maxAngle">
       <number>180</number>
@@ -293,7 +293,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
