--- a/dct_widgets/wbbox/wbbox.ui
+++ b/dct_widgets/wbbox/wbbox.ui
@@ -86,10 +86,10 @@
            <number>180</number>
           </property>
           <property name="needleImage">
-           <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+           <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
           </property>
           <property name="backgroundImage">
-           <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-blue.png</pixmap>
+           <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-blue.png</pixmap>
           </property>
          </widget>
         </item>
@@ -166,10 +166,10 @@
            <number>180</number>
           </property>
           <property name="needleImage">
-           <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+           <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
           </property>
           <property name="backgroundImage">
-           <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-red.png</pixmap>
+           <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-red.png</pixmap>
           </property>
          </widget>
         </item>
@@ -335,10 +335,10 @@
              <number>180</number>
             </property>
             <property name="needleImage">
-             <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+             <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
             </property>
             <property name="backgroundImage">
-             <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-green.png</pixmap>
+             <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-green.png</pixmap>
             </property>
            </widget>
           </item>
@@ -391,10 +391,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -444,10 +444,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -500,10 +500,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -553,10 +553,10 @@
          <number>150</number>
         </property>
         <property name="needleImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
         </property>
         <property name="backgroundImage">
-         <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+         <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
         </property>
        </widget>
       </item>
@@ -593,7 +593,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
