--- a/dct_widgets/gammabox/gammabox.ui
+++ b/dct_widgets/gammabox/gammabox.ui
@@ -36,7 +36,7 @@
      </property>
      <widget class="QWidget" name="tabMaster">
       <attribute name="icon">
-       <iconset resource="../../ressource/ressource.qrc">
+       <iconset resource="../../resource/resource.qrc">
         <normaloff>:/images/tab/gray.png</normaloff>:/images/tab/gray.png</iconset>
       </attribute>
       <attribute name="title">
@@ -71,7 +71,7 @@
      </widget>
      <widget class="QWidget" name="tabRedChannel">
       <attribute name="icon">
-       <iconset resource="../../ressource/ressource.qrc">
+       <iconset resource="../../resource/resource.qrc">
         <normaloff>:/images/tab/red.png</normaloff>:/images/tab/red.png</iconset>
       </attribute>
       <attribute name="title">
@@ -98,7 +98,7 @@
      </widget>
      <widget class="QWidget" name="tabGreenChannel">
       <attribute name="icon">
-       <iconset resource="../../ressource/ressource.qrc">
+       <iconset resource="../../resource/resource.qrc">
         <normaloff>:/images/tab/green.png</normaloff>:/images/tab/green.png</iconset>
       </attribute>
       <attribute name="title">
@@ -125,7 +125,7 @@
      </widget>
      <widget class="QWidget" name="tabBlueChannel">
       <attribute name="icon">
-       <iconset resource="../../ressource/ressource.qrc">
+       <iconset resource="../../resource/resource.qrc">
         <normaloff>:/images/tab/blue.png</normaloff>:/images/tab/blue.png</iconset>
       </attribute>
       <attribute name="title">
@@ -212,10 +212,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -384,10 +384,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -453,10 +453,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -505,10 +505,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -554,10 +554,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -606,10 +606,10 @@
         <number>180</number>
        </property>
        <property name="needleImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/needle/dial-pointer.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/needle/dial-pointer.png</pixmap>
        </property>
        <property name="backgroundImage">
-        <pixmap resource="../../ressource/ressource.qrc">:/images/back/dial-back-gray.png</pixmap>
+        <pixmap resource="../../resource/resource.qrc">:/images/back/dial-back-gray.png</pixmap>
        </property>
       </widget>
      </item>
@@ -622,6 +622,7 @@
    <class>SingleChannelKnobBox</class>
    <extends>QGroupBox</extends>
    <header>singlechannelknobbox.h</header>
+   <container>1</container>
   </customwidget>
   <customwidget>
    <class>QCustomPlot</class>
@@ -630,7 +631,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../ressource/ressource.qrc"/>
+  <include location="../../resource/resource.qrc"/>
  </resources>
  <connections/>
 </ui>
